--- a/docs/guide/功能详情/世界书/修改世界书.md
+++ b/docs/guide/功能详情/世界书/修改世界书.md
@@ -11,7 +11,7 @@
 设置当前聊天绑定的世界书。
 
 ```typescript
-async function setChatLorebook(lorebook: string | null): Promise<void>;
+function setChatLorebook(lorebook: string | null): Promise<void>;
     
 ```
 
@@ -68,7 +68,7 @@ if (_.isEqual(_.merge({}, settings, expected_settings), settings)) {
 设置当前角色卡绑定的世界书。
 
 ```typescript
-async function setCurrentCharLorebooks(
+function setCurrentCharLorebooks(
   lorebooks: Partial<CharLorebooks>
 ): Promise<void>;
 ```
