--- a/docs/guide/功能详情/世界书/删除世界书.md
+++ b/docs/guide/功能详情/世界书/删除世界书.md
@@ -11,7 +11,7 @@
 删除世界书。
 
 ```typescript
-async function deleteLorebook(lorebook: string): Promise<boolean>;
+function deleteLorebook(lorebook: string): Promise<boolean>;
 ```
 
 ### 参数
@@ -30,7 +30,7 @@ async function deleteLorebook(lorebook: string): Promise<boolean>;
 批量删除世界书中的条目。
 
 ```typescript
-async function deleteLorebookEntries(
+function deleteLorebookEntries(
   lorebook: string,
   uids: number[]
 ): Promise<{ entries: LorebookEntry[]; delete_occurred: boolean }>;
