--- a/docs/guide/功能详情/世界书/获取世界书.md
+++ b/docs/guide/功能详情/世界书/获取世界书.md
@@ -31,7 +31,7 @@ function getLorebookSettings(): LorebookSettings;
 ```
 
 ```typescript [LorebookSettings]
-interface LorebookSettings {
+type LorebookSettings = {
   selected_global_lorebooks: string[];
 
   scan_depth: number;
@@ -90,14 +90,14 @@ function getCharLorebooks({ name, type }?: GetCharLorebooksOption): CharLorebook
 ```
 
 ```typescript [CharLorebooks]
-interface CharLorebooks {
+type CharLorebooks = {
   primary: string | null;
   additional: string[];
 }
 ```
 
 ```typescript [GetCharLorebooksOption]
-interface GetCharLorebooksOption {
+type GetCharLorebooksOption = {
   name?: string; // 要查询的角色卡名称；默认为当前角色卡
   type?: "all" | "primary" | "additional"; // 按角色世界书的绑定类型筛选世界书；默认为 'all'
 }
@@ -153,7 +153,7 @@ function getCurrentCharPrimaryLorebook(): string | null;
 获取当前聊天绑定的世界书。
 
 ```typescript
-async function getChatLorebook(): Promise<string | null>;
+function getChatLorebook(): Promise<string | null>;
 ```
 
 ### 返回值
@@ -165,7 +165,7 @@ async function getChatLorebook(): Promise<string | null>;
 设置当前聊天绑定的世界书。
 
 ```typescript
-async function setChatLorebook(lorebook: string | null): Promise<void>;
+function setChatLorebook(lorebook: string | null): Promise<void>;
 ```
 
 ### 参数
@@ -180,7 +180,7 @@ async function setChatLorebook(lorebook: string | null): Promise<void>;
 获取或创建当前聊天绑定的世界书。
 
 ```typescript
-async function getOrCreateChatLorebook(lorebook?: string): Promise<string>;
+function getOrCreateChatLorebook(lorebook?: string): Promise<string>;
 ```
 
 ### 参数
