--- a/docs/guide/功能详情/世界书条目/创建世界书条目.md
+++ b/docs/guide/功能详情/世界书条目/创建世界书条目.md
@@ -11,7 +11,7 @@
 向世界书中批量新增条目。
 
 ```typescript
-async function createLorebookEntries(
+function createLorebookEntries(
   lorebook: string,
   entries: Partial<LorebookEntry>[]
 ): Promise<{ entries: LorebookEntry[]; new_uids: number[] }>;
