--- a/docs/guide/功能详情/世界书条目/删除世界书条目.md
+++ b/docs/guide/功能详情/世界书条目/删除世界书条目.md
@@ -11,7 +11,7 @@
 批量删除世界书中的条目。
 
 ```typescript
-async function deleteLorebookEntries(
+function deleteLorebookEntries(
   lorebook: string,
   uids: number[]
 ): Promise<{ entries: LorebookEntry[]; delete_occurred: boolean }>;
