--- a/docs/guide/功能详情/世界书条目/获取世界书条目.md
+++ b/docs/guide/功能详情/世界书条目/获取世界书条目.md
@@ -17,13 +17,13 @@ function getLorebookEntries(lorebook: string): Promise<LorebookEntry[]>;
 ```
 
 ```typescript [GetLorebookEntriesOption]
-interface GetLorebookEntriesOption {
+type GetLorebookEntriesOption = {
   filter?: "none" | Partial<LorebookEntry>; // 按照指定字段值筛选条目
 }
 ```
 
 ```typescript [LorebookEntry]
-interface LorebookEntry {
+type LorebookEntry = {
   uid: number; // uid 是相对于世界书内部的，不要跨世界书使用
   display_index: number; // 酒馆中将排序设置为 "自定义" 时的显示顺序
 
