--- a/docs/guide/功能详情/其他辅助功能/其他工具函数.md
+++ b/docs/guide/功能详情/其他辅助功能/其他工具函数.md
@@ -15,7 +15,7 @@ order: 99
 替换字符串中的 SillyTavern 宏。
 
 ```typescript
-async function substitudeMacros(text: string): Promise<string>;
+function substitudeMacros(text: string): Promise<string>;
 ```
 
 ### 参数
@@ -121,7 +121,7 @@ function getCurrentMessageId(): number;
 获取最新楼层 id。
 
 ```typescript
-async function getLastMessageId(): Promise<number>;
+function getLastMessageId(): Promise<number>;
 ```
 
 ### 返回值
