--- a/docs/guide/功能详情/变量操作/删除变量.md
+++ b/docs/guide/功能详情/变量操作/删除变量.md
@@ -11,7 +11,7 @@
 删除变量, 如果变量不存在则什么也不做。
 
 ```typescript
-async function deleteVariable(variable_path: string, { type, message_id }?: VariableOption): Promise<boolean> {
+function deleteVariable(variable_path: string, { type, message_id }?: VariableOption): Promise<{ variables: Record<string, any>; delete_occurred: boolean }> {
   let result: boolean = false;
   await updateVariablesWith(old_variables => { result = _.unset(old_variables, variable_path); return old_variables; }, { type, message_id });
   return result;
