--- a/docs/guide/功能详情/接口访问.md
+++ b/docs/guide/功能详情/接口访问.md
@@ -8,7 +8,7 @@
 
 ## SillyTavern
 
-通过 `SillyTavern`，你可以访问酒馆提供给扩展的稳定接口。
+通过 `SillyTavern`，你可以访问酒馆提供给扩展的稳定接口。酒馆助手为它们额外提供了[类型定义](https://github.com/N0VI028/JS-Slash-Runner/blob/main/%40types/iframe_client/exported.sillytavern.d.ts)。
 
 而酒馆助手在酒馆接口之外，提供了更多更直接的功能。
 
@@ -45,3 +45,36 @@ alert(TavernHelper.getCharAvatarPath());
 ::: warning
 在功能详情文档中，未导出到 window 对象的函数会使用 `🚫TavernHelper` 标记。这些函数在扩展中无法直接通过 `TavernHelper` 调用。
 :::
+
+## 提示词模板
+
+通过 `EjsTemplate`，你可以访问[提示词模板](https://github.com/zonde306/ST-Prompt-Template)提供的接口。酒馆助手为它们额外提供了[类型定义](https://github.com/N0VI028/JS-Slash-Runner/blob/main/%40types/iframe_client/exported.ejstemplate.d.ts)。
+
+```typescript
+/**
+ * 提示词模板语法插件所提供的额外功能, 必须额外安装提示词模板语法插件, 具体内容见于 https://github.com/zonde306/ST-Prompt-Template
+ * 你也可以在酒馆页面按 f12, 在控制台中输入 `window.EjsTemplate` 来查看当前提示词模板语法所提供的接口
+ */
+const EjsTemplate;
+```
+
+## MVU 变量框架
+
+通过 `Mvu`，你可以访问[MVU 变量框架](https://github.com/MagicalAstrogy/MagVarUpdate)提供的接口。酒馆助手为它们额外提供了[类型定义](https://github.com/N0VI028/JS-Slash-Runner/blob/main/%40types/iframe_client/exported.mvu.d.ts)。
+
+```typescript
+/**
+ * mvu 变量框架脚本提供的额外功能, 必须额外安装 mvu 变量框架脚本, 具体内容见于 https://github.com/MagicalAstrogy/MagVarUpdate/blob/master/src/export_globals.ts
+ * **要使用它, 你必须保证你的脚本/界面加载在 mvu 脚本之后
+ * 你也可以在酒馆页面按 f12, 在控制台中输入 `window.Mvu` 来查看当前 Mvu 变量框架所提供的接口
+ */
+declare const Mvu;
+```
+
+### 示例
+
+```typescript
+const old_data = Mvu.getMvuData({ type: 'message', message_id: 'latest' });
+const new_data = await Mvu.parseMessage("_.set('角色.络络.好感度', 30); // 强制修改", old_data);
+await Mvu.replaceMvuData(new_data, { type: 'message', message_id: 'latest' });
+```
