--- a/docs/guide/功能详情/楼层消息/修改消息.md
+++ b/docs/guide/功能详情/楼层消息/修改消息.md
@@ -13,14 +13,14 @@
 :::code-group
 
 ```typescript [setChatMessages]
-async function setChatMessages(
+function setChatMessages(
   chat_messages: Array<{ message_id: number } & (Partial<ChatMessage> | Partial<ChatMessageSwiped>)>,
   option: SetChatMessagesOption = {}
 ): Promise<void>;
 ```
 
 ```typescript [SetChatMessagesOption]
-interface SetChatMessagesOption {
+type SetChatMessagesOption = {
   refresh?: 'none' | 'affected' | 'all';
 }
 ```
@@ -82,7 +82,7 @@ await setChatMessages(_.range(last_message_id + 1).map(message_id => ({message_i
 :::code-group
 
 ```typescript [rotateChatMessages]
-async function rotateChatMessages(
+function rotateChatMessages(
   begin: number,
   middle: number,
   end: number,
@@ -91,7 +91,7 @@ async function rotateChatMessages(
 ```
 
 ```typescript [RotateChatMessagesOption]
-interface RotateChatMessagesOption {
+type RotateChatMessagesOption = {
   refresh?: 'none' | 'all';
 }
 ```
