--- a/docs/guide/功能详情/楼层消息/创建消息.md
+++ b/docs/guide/功能详情/楼层消息/创建消息.md
@@ -13,14 +13,14 @@
 :::code-group
 
 ```typescript [createChatMessages]
-async function createChatMessages(
+function createChatMessages(
   chat_messages: ChatMessageCreating[],
   option: CreateChatMessagesOption = {}
 ): Promise<void>;
 ```
 
 ```typescript [ChatMessageCreating]
-interface ChatMessageCreating {
+type ChatMessageCreating = {
   name?: string;
   role: 'system' | 'assistant' | 'user';
   is_hidden?: boolean;
@@ -30,7 +30,7 @@ interface ChatMessageCreating {
 ```
 
 ```typescript [CreateChatMessagesOption]
-interface CreateChatMessagesOption {
+type CreateChatMessagesOption = {
   insert_at?: number | 'end';
   refresh?: 'none' | 'affected' | 'all';
 }
