--- a/docs/guide/功能详情/楼层消息/删除消息.md
+++ b/docs/guide/功能详情/楼层消息/删除消息.md
@@ -13,14 +13,14 @@
 :::code-group
 
 ```typescript [deleteChatMessages]
-async function deleteChatMessages(
+function deleteChatMessages(
   message_ids: number[],
   option: DeleteChatMessagesOption = {}
 ): Promise<void>;
 ```
 
 ```typescript [DeleteChatMessagesOption]
-interface DeleteChatMessagesOption {
+type DeleteChatMessagesOption = {
   refresh?: 'none' | 'all';
 }
 ```
