--- a/docs/guide/功能详情/楼层消息/获取消息.md
+++ b/docs/guide/功能详情/楼层消息/获取消息.md
@@ -22,7 +22,7 @@ function getChatMessages(
 ```
 
 ```typescript [GetChatMessagesOption]
-interface GetChatMessagesOption {
+type GetChatMessagesOption = {
   role?: "all" | "system" | "assistant" | "user";
   hide_state?: "all" | "hidden" | "unhidden";
   include_swipes?: boolean;
@@ -30,7 +30,7 @@ interface GetChatMessagesOption {
 ```
 
 ```typescript [ChatMessage]
-interface ChatMessage {
+type ChatMessage = {
   message_id: number;
   name: string;
   role: "system" | "assistant" | "user";
@@ -42,7 +42,7 @@ interface ChatMessage {
 ```
 
 ```typescript [ChatMessageSwiped]
-interface ChatMessageSwiped {
+type ChatMessageSwiped = {
   message_id: number;
   name: string;
   role: "system" | "assistant" | "user";
@@ -128,7 +128,7 @@ function formatAsDisplayedMessage(
 ```
 
 ```typescript [FormatAsDisplayedMessageOption]
-interface FormatAsDisplayedMessageOption {
+type FormatAsDisplayedMessageOption = {
   message_id?: "last" | "last_user" | "last_char" | number; // 消息所在的楼层，要求该楼层已经存在，即在 `[0, await getLastMessageId()]` 范围内; 默认为 'last'
 }
 ```
