--- a/docs/guide/功能详情/监听和发送事件.md
+++ b/docs/guide/功能详情/监听和发送事件.md
@@ -183,7 +183,7 @@ eventOnce(要监听的事件, 要注册的函数);
 等待一次 `event_type` 事件发生，返回事件数据。
 
 ```typescript
-async function eventWaitOnce(event_type: EventType): Promise<any | undefined>;
+function eventWaitOnce(event_type: EventType): Promise<any | undefined>;
 ```
 
 ### 参数
@@ -212,7 +212,7 @@ console.log(`消息 ${messageId} 被删除了`);
 在调用本函数前, `listener` 必须已经在监听 `event_type`。
 
 ```typescript
-async function eventWaitOnce<T extends EventType>(
+function eventWaitOnce<T extends EventType>(
   event_type: T,
   listener: ListenerType[T],
 ): Promise<any | undefined>;
@@ -250,7 +250,7 @@ console.log(`存档结果: ${result}`);
 所有正在监听 `event_type` 消息频道的都会收到该消息并接收到 `data`。
 
 ```typescript
-async function eventEmit<T extends EventType>(
+function eventEmit<T extends EventType>(
   event_type: T,
   ...data: Parameters<ListenerType[T]>
 ): Promise<void>;
