--- a/docs/guide/功能详情/获取角色卡信息.md
+++ b/docs/guide/功能详情/获取角色卡信息.md
@@ -13,7 +13,7 @@
 :::code-group
 
 ```typescript [getCharData]
-async function getCharData(name: string, allowAvatar: boolean = false): Promise<v1CharData | null>;
+function getCharData(name: LiteralUnion<'current' | string>, allowAvatar: boolean = false): Promise<v1CharData | null>;
 ```
 
 ```typescript [v1CharData]
@@ -192,7 +192,7 @@ console.log(charDataWithAvatar);
 获取角色头像的URL路径。
 
 ```typescript
-async function getCharAvatarPath(name: string, allowAvatar: boolean = false): Promise<string | null>;
+function getCharAvatarPath(name: LiteralUnion<'current' | string>, allowAvatar: boolean = false): Promise<string | null>;
 ```
 
 ### 参数
@@ -225,7 +225,7 @@ console.log(avatarPath);
 :::code-group
 
 ```typescript [getChatHistoryBrief]
-async function getChatHistoryBrief(name: string, allowAvatar: boolean = false): Promise<ChatHistoryBrief[] | null>;
+function getChatHistoryBrief(name: LiteralUnion<'current' | string>, allowAvatar: boolean = false): Promise<ChatHistoryBrief[] | null>;
 ```
 
 ```typescript [ChatHistoryBrief]
@@ -272,11 +272,11 @@ console.log(historyBrief);
 :::code-group
 
 ```typescript [getChatHistoryDetail]
-async function getChatHistoryDetail(data: any[], isGroupChat: boolean = false): Promise<Record<string, ChatHistoryDetail[]> | null>;
+function getChatHistoryDetail(data: any[], isGroupChat: boolean = false): Promise<Record<string, ChatHistoryDetail[]> | null>;
 ```
 
 ```typescript [ChatHistoryDetail]
-interface ChatHistoryDetail {
+type ChatHistoryDetail = {
   name: string;        // 发送者名称
   is_user: boolean;    // 是否用户发送的消息
   is_system: boolean;  // 是否系统消息
