--- a/docs/guide/功能详情/触发快速回复命令.md
+++ b/docs/guide/功能详情/触发快速回复命令.md
@@ -21,7 +21,7 @@
 运行 Slash 命令, 注意如果命令写错了将不会有任何反馈。
 
 ```typescript
-async function triggerSlash(command: string): Promise<string>;
+function triggerSlash(command: string): Promise<string>;
 ```
 
 ### 参数
