--- a/docs/guide/功能详情/请求生成.md
+++ b/docs/guide/功能详情/请求生成.md
@@ -16,7 +16,7 @@
 使用 Silly Tavern 当前启用的预设，让 AI 生成一段文本。
 
 ```typescript
-async function generate(config: GenerateConfig): Promise<string>;
+function generate(config: GenerateConfig): Promise<string>;
 ```
 
 ### 参数
@@ -94,7 +94,7 @@ const result = await generate({
 不使用 SillyTavern 当前启用的预设，让 AI 生成一段文本。
 
 ```typescript
-async function generateRaw(config: GenerateConfig): Promise<string>;
+function generateRaw(config: GenerateConfig): Promise<string>;
 ```
 
 ### 参数
