--- a/docs/guide/功能详情/酒馆正则.md
+++ b/docs/guide/功能详情/酒馆正则.md
@@ -35,14 +35,14 @@ function getTavernRegexes(
 ```
 
 ```typescript [GetTavernRegexesOption]
-interface GetTavernRegexesOption {
+type GetTavernRegexesOption = {
   scope?: "all" | "global" | "character"; // 按所在区域筛选正则
   enable_state?: "all" | "enabled" | "disabled"; // 按是否被开启筛选正则
 }
 ```
 
 ```typescript [TavernRegex]
-interface TavernRegex {
+type TavernRegex = {
   id: string;
   script_name: string;
   enabled: boolean;
@@ -141,7 +141,7 @@ function replaceTavernRegexes(
 ```
 
 ```typescript [ReplaceTavernRegexesOption]
-interface ReplaceTavernRegexesOption {
+type ReplaceTavernRegexesOption = {
   scope?: "all" | "global" | "character"; // 要替换的酒馆正则部分
 }
 ```
@@ -188,7 +188,7 @@ await replaceTavernRegexes(regexes, {});
 :::code-group
 
 ```typescript [updateTavernRegexesWith]
-async function updateTavernRegexesWith(
+function updateTavernRegexesWith(
   updater: TavernRegexUpdater,
   option: ReplaceTavernRegexesOption = {}
 ): Promise<TavernRegex[]>;
@@ -201,7 +201,7 @@ type TavernRegexUpdater =
 ```
 
 ```typescript [ReplaceTavernRegexesOption]
-interface ReplaceTavernRegexesOption {
+type ReplaceTavernRegexesOption = {
   scope?: "all" | "global" | "character"; // 要替换的酒馆正则部分
 }
 ```
