--- a/docs/guide/功能详情/预设操作/创建预设.md
+++ b/docs/guide/功能详情/预设操作/创建预设.md
@@ -17,14 +17,14 @@ order: 1
 ::: code-group
 
 ```typescript [createPreset]
-async function createPreset(
+function createPreset(
   preset_name: Exclude<string, "in_use">,
-  preset: PromptPreset = default_preset
+  preset: Preset = default_preset
 ): Promise<boolean>;
 ```
 
-```typescript [PromptPreset]
-interface PromptPreset {
+```typescript [Preset]
+type Preset = {
   settings: {
     /** 最大上下文 token 数 */
     max_context: number;
@@ -56,7 +56,7 @@ interface PromptPreset {
     squash_system_messages: boolean;
 
     /** 推理强度, 即内置思维链的投入程度. 例如, 如果酒馆直连 gemini-2.5-flash, 则 `min` 将会不使用内置思维链 */
-    reasoning_effort: "auto" | "min" | "low" | "medium" | "high" | "max";
+    reasoning_effort: 'auto' | 'min' | 'low' | 'medium' | 'high' | 'max';
     /** 请求思维链: 允许模型返回内置思维链的思考过程; 注意这只影响内置思维链显不显示, 不决定模型是否使用内置思维链 */
     request_thoughts: boolean;
     /** 请求图片: 允许模型在回复中返回图片 */
@@ -67,7 +67,7 @@ interface PromptPreset {
     enable_web_search: boolean;
 
     /** 是否允许发送图片作为提示词 */
-    allow_images: "disabled" | "auto" | "low" | "high";
+    allow_images: 'disabled' | 'auto' | 'low' | 'high';
     /** 是否允许发送视频作为提示词 */
     allow_videos: boolean;
 
@@ -78,7 +78,7 @@ interface PromptPreset {
      * - `content`: 为所有消息添加角色名称前缀, 添加到 `content` 字段开头 (即发送的消息内容是 `角色名: 消息内容`)
      * - `completion`: 在发送给模型时, 将角色名称写入到 `name` 字段; 仅支持字母数字和下划线, 不适用于 Claude、Google 等模型
      */
-    character_name_prefix: "none" | "default" | "content" | "completion";
+    character_name_prefix: 'none' | 'default' | 'content' | 'completion';
     /** 用引号包裹用户消息: 在发送给模型之前, 将所有用户消息用引号包裹 */
     wrap_user_messages_in_quotes: boolean;
   };
@@ -94,69 +94,70 @@ interface PromptPreset {
 ```
 
 ```typescript [PresetPrompt]
-type PresetPrompt =
-  | PresetNormalPrompt
-  | PresetSystemPrompt
-  | PresetPlaceholderPrompt;
-```
-
-```typescript [PresetNormalPrompt]
-interface PresetNormalPrompt {
-  id: string;
-  enabled: boolean;
+type PresetPrompt = {
+  /**
+   * 根据 id, 预设提示词分为以下三类:
+   * - 普通提示词 (`isPresetNormalPrompt`): 预设界面上可以手动添加的提示词
+   * - 系统提示词 (`isPresetSystemPrompt`): 酒馆所设置的系统提示词, 但其实相比于手动添加的提示词没有任何优势, 分为 `main`、`nsfw`、`jailbreak`、`enhance_definitions`
+   * - 占位符提示词 (`isPresetPlaceholderPrompt`): 用于表示世界书条目、角色卡、玩家角色、聊天记录等提示词的插入位置, 分为 `world_info_before`、`persona_description`、`char_description`、`char_personality`、`scenario`、`world_info_after`、`dialogue_examples`、`chat_history`
+   */
+  id: LiteralUnion<
+    | 'main'
+    | 'nsfw'
+    | 'jailbreak'
+    | 'enhance_definitions'
+    | 'world_info_before'
+    | 'persona_description'
+    | 'char_description'
+    | 'char_personality'
+    | 'scenario'
+    | 'world_info_after'
+    | 'dialogue_examples'
+    | 'chat_history',
+    string
+  >;
   name: string;
-  /** 插入位置: `'relative'` 则按提示词相对位置插入, `number` 则插入到聊天记录中的对应深度 */
-  position: "relative" | number;
+  enabled: boolean;
 
-  role: "system" | "user" | "assistant";
-  content: string;
+  /**
+   * 插入位置, 仅用于普通和占位符提示词
+   *   - `'relative'`: 按提示词相对位置插入
+   *   - `number`: 插入到聊天记录的对应深度
+   */
+  position?: 'relative' | number;
+  role: 'system' | 'user' | 'assistant';
+  /** 仅用于普通和系统提示词 */
+  content?: string;
 
   /** 额外字段, 用于为预设提示词绑定额外数据 */
   extra?: Record<string, any>;
-}
-```
-
-```typescript [PresetSystemPrompt]
-/** 预设中的酒馆系统提示词, 但其实相比于手动添加的提示词没有任何优势 */
-interface PresetSystemPrompt {
-  id: "main" | "nsfw" | "jailbreak" | "enhanceDefinitions";
-  enabled: boolean;
-  name: string;
-
-  role: "system" | "user" | "assistant";
-  content: string;
-
-  /** 额外字段, 用于为预设提示词绑定额外数据 */
-  extra?: Record<string, any>;
-}
-```
-
-```typescript [PresetPlaceholderPrompt]
-/** 预设提示词中的占位符提示词, 对应于世界书条目、角色卡、玩家角色、聊天记录等提示词 */
-interface PresetPlaceholderPrompt {
-  id:
-    | "world_info_before"
-    | "persona_description"
-    | "char_description"
-    | "char_personality"
-    | "scenario"
-    | "world_info_after"
-    | "dialogue_examples"
-    | "chat_history";
-  enabled: boolean;
-  name: string;
-  /** 插入位置: `'relative'` 则按提示词相对位置插入, `number` 则插入到聊天记录中的对应深度 */
-  position: "relative" | number;
-
-  role: "system" | "user" | "assistant";
-
-  /** 额外字段, 用于为预设提示词绑定额外数据 */
-  extra?: Record<string, any>;
-}
+};
+type PresetNormalPrompt = SetRequired<{ id: string } & Omit<PresetPrompt, 'id'>, 'position' | 'content'>;
+type PresetSystemPrompt = SetRequired<
+  { id: 'main' | 'nsfw' | 'jailbreak' | 'enhance_definitions' } & Omit<PresetPrompt, 'id'>,
+  'content'
+>;
+type PresetPlaceholderPrompt = SetRequired<
+  {
+    id:
+      | 'world_info_before'
+      | 'persona_description'
+      | 'char_description'
+      | 'char_personality'
+      | 'scenario'
+      | 'world_info_after'
+      | 'dialogue_examples'
+      | 'chat_history';
+  } & Omit<PresetPrompt, 'id'>,
+  'position'
+>;
+function isPresetNormalPrompt(prompt: PresetPrompt): prompt is PresetNormalPrompt;
+function isPresetSystemPrompt(prompt: PresetPrompt): prompt is PresetSystemPrompt;
+function isPresetPlaceholderPrompt(prompt: PresetPrompt): prompt is PresetPlaceholderPrompt;
 ```
 
 ```typescript [default_preset]
-const default_preset: PromptPreset = {
+const default_preset: Preset = {
   settings: {
     max_context: 2000000,
     max_completion_tokens: 300,
@@ -245,7 +246,7 @@ const default_preset: PromptPreset = {
 
 #### preset
 
-- **类型**: [`PromptPreset`](./创建预设.md#createpreset)
+- **类型**: [`Preset`](./创建预设.md#createpreset)
 - **描述**: 预设内容; 不填则使用默认内容
 
 ### 返回值
@@ -257,9 +258,9 @@ const default_preset: PromptPreset = {
 创建或替换名为 `preset_name` 的预设, 内容为 `preset`。
 
 ```typescript
-async function createOrReplacePreset(
-  preset_name: "in_use" | string,
-  preset: PromptPreset = default_preset
+function createOrReplacePreset(
+  preset_name: LiteralUnion<'in_use', string>,
+  preset: Preset = default_preset
 ): Promise<boolean>;
 ```
 
@@ -272,7 +273,7 @@ async function createOrReplacePreset(
 
 #### preset
 
-- **类型**: [`PromptPreset`](./创建预设.md#createpreset)
+- **类型**: [`Preset`](./创建预设.md#createpreset)
 - **描述**: 预设内容; 不填则使用默认内容
 
 ### 返回值
