--- a/docs/guide/功能详情/预设操作/删除预设.md
+++ b/docs/guide/功能详情/预设操作/删除预设.md
@@ -15,7 +15,7 @@ order: 4
 删除 `preset_name` 预设。
 
 ```typescript
-async function deletePreset(preset_name: Exclude<string, 'in_use'>): Promise<boolean>;
+function deletePreset(preset_name: Exclude<string, 'in_use'>): Promise<boolean>;
 ```
 
 ### 参数
