--- a/docs/guide/功能详情/预设操作/获取预设.md
+++ b/docs/guide/功能详情/预设操作/获取预设.md
@@ -45,7 +45,7 @@ function getLoadedPresetName(): string;
 获取 `preset_name` 预设的内容。
 
 ```typescript
-function getPreset(preset_name: 'in_use' | string): PromptPreset | null;
+function getPreset(preset_name: LiteralUnion<'in_use', string>): Preset | null;
 ```
 
 ### 参数
@@ -57,7 +57,7 @@ function getPreset(preset_name: 'in_use' | string): PromptPreset | null;
 
 ### 返回值
 
-- **预设内容**: [`PromptPreset`](./创建预设.md#createpreset) | `null`
+- **预设内容**: [`Preset`](./创建预设.md#createpreset) | `null`
 
 ## isPresetNormalPrompt
 
