--- a/docs/guide/功能详情/世界书/创建世界书.md
+++ b/docs/guide/功能详情/世界书/创建世界书.md
@@ -11,7 +11,7 @@
 新建世界书。
 
 ```typescript
-async function createLorebook(lorebook: string): Promise<boolean>;
+function createLorebook(lorebook: string): Promise<boolean>;
 ```
 
 ### 参数
@@ -30,7 +30,7 @@ async function createLorebook(lorebook: string): Promise<boolean>;
 向世界书中批量新增条目。
 
 ```typescript
-async function createLorebookEntries(
+function createLorebookEntries(
   lorebook: string,
   entries: Partial<LorebookEntry>[]
 ): Promise<{ entries: LorebookEntry[]; new_uids: number[] }>;
