--- a/docs/guide/功能详情/世界书条目/修改世界书条目.md
+++ b/docs/guide/功能详情/世界书条目/修改世界书条目.md
@@ -11,7 +11,7 @@
 修改世界书中的条目信息。
 
 ```typescript
-async function setLorebookEntries(
+function setLorebookEntries(
   lorebook: string,
   entries: Array<Pick<LorebookEntry, 'uid'> & Partial<LorebookEntry>>
 ): Promise<LorebookEntry[]>;
@@ -72,7 +72,7 @@ const updatedEntries = await setLorebookEntries(
 完全替换世界书的所有条目。
 
 ```typescript
-async function replaceLorebookEntries(
+function replaceLorebookEntries(
   lorebook: string, 
   entries: Partial<LorebookEntry>[]
 ): Promise<void>;
@@ -119,7 +119,7 @@ await replaceLorebookEntries(lorebook, entries);
 :::code-group
 
 ```typescript [updateLorebookEntriesWith]
-async function updateLorebookEntriesWith(
+function updateLorebookEntriesWith(
   lorebook: string,
   updater: LorebookEntriesUpdater
 ): Promise<LorebookEntry[]>;
