--- a/docs/guide/功能详情/版本操作.md
+++ b/docs/guide/功能详情/版本操作.md
@@ -11,7 +11,7 @@
 获取酒馆助手版本号。
 
 ```typescript
-async function getTavernHelperVersion(): Promise<string>;
+function getTavernHelperVersion(): Promise<string>;
 ```
 
 ### 返回值
@@ -23,7 +23,7 @@ async function getTavernHelperVersion(): Promise<string>;
 尝试主动更新酒馆助手。
 
 ```typescript
-async function updateTavernHelper(): Promise<boolean>;
+function updateTavernHelper(): Promise<boolean>;
 ```
 
 ### 返回值
