--- a/docs/guide/功能详情/预设操作/修改预设.md
+++ b/docs/guide/功能详情/预设操作/修改预设.md
@@ -34,7 +34,7 @@ function loadPreset(preset_name: Exclude<string, 'in_use'>): boolean;
 重命名 `preset_name` 预设为 `new_name`。
 
 ```typescript
-async function renamePreset(preset_name: Exclude<string, 'in_use'>, new_name: string): Promise<boolean>;
+function renamePreset(preset_name: Exclude<string, 'in_use'>, new_name: string): Promise<boolean>;
 ```
 
 ### 参数
@@ -58,7 +58,7 @@ async function renamePreset(preset_name: Exclude<string, 'in_use'>, new_name: st
 完全替换 `preset_name` 预设的内容为 `preset`。
 
 ```typescript
-async function replacePreset(preset_name: 'in_use' | string, preset: PromptPreset): Promise<void>;
+function replacePreset(preset_name: LiteralUnion<'in_use', string>, preset: Preset): Promise<void>;
 ```
 
 ### 参数
@@ -70,7 +70,7 @@ async function replacePreset(preset_name: 'in_use' | string, preset: PromptPrese
 
 #### preset
 
-- **类型**: [`PromptPreset`](./创建预设.md#createpreset)
+- **类型**: [`Preset`](./创建预设.md#createpreset)
 - **描述**: 预设内容
 
 ### 示例
@@ -99,11 +99,11 @@ await replacePreset('预设B', preset_b);
 ::: code-group
 
 ```typescript [updatePresetWith]
-async function updatePresetWith(preset_name: 'in_use' | string, updater: PresetUpdater): Promise<PromptPreset>;
+function updatePresetWith(preset_name: LiteralUnion<'in_use', string>, updater: PresetUpdater): Promise<Preset>;
 ```
 
 ```typescript [PresetUpdater]
-type PresetUpdater = ((preset: PromptPreset) => PromptPreset) | ((preset: PromptPreset) => Promise<PromptPreset>);
+type PresetUpdater = ((preset: Preset) => Preset) | ((preset: Preset) => Promise<Preset>);
 ```
 
 :::
@@ -122,7 +122,7 @@ type PresetUpdater = ((preset: PromptPreset) => PromptPreset) | ((preset: Prompt
 
 ### 返回值
 
-- **更新后的预设内容**: [`PromptPreset`](./创建预设.md#createpreset)
+- **更新后的预设内容**: [`Preset`](./创建预设.md#createpreset)
 
 ### 示例
 
@@ -151,7 +151,7 @@ const preset = await updatePresetWith('预设B', preset => {
 将预设内容修改回预设中, 如果某个内容不存在, 则该内容将会采用原来的值。
 
 ```typescript
-async function setPreset(preset_name: 'in_use' | string, preset: PartialDeep<PromptPreset>): Promise<PromptPreset>;
+function setPreset(preset_name: LiteralUnion<'in_use', string>, preset: PartialDeep<Preset>): Promise<Preset>;
 ``` 
 
 ### 参数
@@ -163,12 +163,12 @@ async function setPreset(preset_name: 'in_use' | string, preset: PartialDeep<Pro
 
 #### preset
 
-- **类型**: [`PartialDeep<PromptPreset>`](./创建预设.md#createpreset)
+- **类型**: [`PartialDeep<Preset>`](./创建预设.md#createpreset)
 - **描述**: 预设内容
 
 ### 返回值
 
-- **更新后的预设内容**: [`PromptPreset`](./创建预设.md#createpreset)
+- **更新后的预设内容**: [`Preset`](./创建预设.md#createpreset)
 
 ### 示例
 
