--- a/docs/guide/功能详情/请求生成.md
+++ b/docs/guide/功能详情/请求生成.md
@@ -33,8 +33,8 @@ function generate(config: GenerateConfig): Promise<string>;
 
 #### `image?`
 
-- **类型**: `File|string`
-- **描述**:  图片输入，支持以下格式：
+- **类型**: `File|string[]`
+- **描述**:  图片输入，支持以数组形式输入多张图片：
   - `File` 对象：通过 `input[type="file"]` 获取的文件对象
   - `Base64` 字符串：图片的 base64 编码
   - `URL` 字符串：图片的在线地址
@@ -111,8 +111,8 @@ function generateRaw(config: GenerateConfig): Promise<string>;
 
 #### `image?`
 
-- **类型**: `File|string`
-- **描述**:  图片输入，支持以下格式：
+- **类型**: `File|string[]`
+- **描述**:  图片输入，支持以数组形式输入多张图片：
   - `File` 对象：通过 `input[type="file"]` 获取的文件对象
   - `Base64` 字符串：图片的 base64 编码
   - `URL` 字符串：图片的在线地址
