allow_images -> allow_sending_images

--- a/docs/guide/功能详情/预设操作/创建预设.md
+++ b/docs/guide/功能详情/预设操作/创建预设.md
@@ -184,8 +184,8 @@ const default_preset: Preset = {
     enable_function_calling: false,
     enable_web_search: false,
 
-    allow_images: "disabled",
-    allow_videos: false,
+    allow_sending_images: "disabled",
+    allow_sending_videos: false,
 
     character_name_prefix: "none",
     wrap_user_messages_in_quotes: false,
