--- a/docs/guide/功能详情/世界书/修改世界书.md
+++ b/docs/guide/功能详情/世界书/修改世界书.md
@@ -38,10 +38,8 @@ function rebindCharWorldbooks(character_name: 'current', char_worldbooks: CharWo
 
 #### `char_worldbooks`
 
-- **类型**: [`CharWorldbooks`](./获取世界书或条目#getcharworldbooks)
+- **类型**: [`CharWorldbooks`](./获取世界书#getcharworldbooks)
 - **描述**: 要对该角色卡绑定的世界书
-
-
 
 ## rebindChatWorldbook
 
@@ -75,7 +73,7 @@ function replaceWorldbook(worldbook_name: string, worldbook: PartialDeep<Worldbo
 
 #### `worldbook`
 
-- **类型**: [`PartialDeep<WorldbookEntry>[]`](./创建世界书或条目#createworldbook)
+- **类型**: [`PartialDeep<WorldbookEntry>[]`](./创建世界书#createworldbook)
 - **描述**: 要替换的世界书内容
 
 ## updateWorldbookWith
@@ -86,12 +84,14 @@ function replaceWorldbook(worldbook_name: string, worldbook: PartialDeep<Worldbo
 
 ```typescript[updateWorldbookWith]
 function updateWorldbookWith(worldbook_name: string, updater: WorldbookUpdater): Promise<WorldbookEntry[]>;
-``` 
+```
+
 ```typescript[WorldbookUpdater]
 type WorldbookUpdater =
   | ((worldbook: WorldbookEntry[]) => PartialDeep<WorldbookEntry>[])
   | ((worldbook: WorldbookEntry[]) => Promise<PartialDeep<WorldbookEntry>[]>);
 ```
+
 :::
 
 ### 参数
@@ -103,11 +103,9 @@ type WorldbookUpdater =
 
 #### `updater`
 
-- **类型**: [`WorldbookUpdater`](./修改世界书或条目#updateworldbookwith)
+- **类型**: [`WorldbookUpdater`](./修改世界书#updateworldbookwith)
 - **描述**: 用于更新世界书的函数。它应该接收世界书条目作为参数，并返回更新后的世界书条目。
 
 ### 返回值
 
-- **更新后的世界书条目**: [`WorldbookEntry[]`](./创建世界书或条目#createworldbook)
-
-
+- **更新后的世界书条目**: [`WorldbookEntry[]`](./创建世界书#createworldbook)
