--- a/docs/guide/功能详情/世界书/创建世界书.md
+++ b/docs/guide/功能详情/世界书/创建世界书.md
@@ -106,7 +106,7 @@ type WorldbookEntry = {
 
 #### `worldbook`
 
-- **类型**: [`WorldbookEntry[]`](./创建世界书或条目#createworldbook)
+- **类型**: [`WorldbookEntry[]`](./创建世界书#createworldbook)
 - **描述**: 世界书内容; 不填则没有任何条目
 
 ### 返回值
@@ -130,7 +130,7 @@ function createOrReplaceWorldbook(worldbook_name: string, worldbook?: WorldbookE
 
 #### `worldbook`
 
-- **类型**: [`WorldbookEntry[]`](./创建世界书或条目#createworldbook)
+- **类型**: [`WorldbookEntry[]`](./创建世界书#createworldbook)
 - **描述**: 世界书内容; 不填则没有任何条目
 
 ### 返回值
