--- a/docs/guide/功能详情/世界书/获取世界书.md
+++ b/docs/guide/功能详情/世界书/获取世界书.md
@@ -23,7 +23,7 @@ function getWorldbook(worldbook_name: string): Promise<WorldbookEntry[]>;
 
 ### 返回值
 
-- **世界书内容**: [`WorldbookEntry[]`](./创建世界书或条目#createworldbook)
+- **世界书内容**: [`WorldbookEntry[]`](./创建世界书#createworldbook)
 
 ## getWorldbookNames
 
@@ -77,7 +77,7 @@ type CharWorldbooks = {
 
 ### 返回值
 
-- [**CharWorldbooks 对象**](./获取世界书或条目#getCharWorldbookNames): 角色卡绑定的世界书
+- [**CharWorldbooks 对象**](./获取世界书#getCharWorldbookNames): 角色卡绑定的世界书
 
 ## getChatWorldbookName
 
@@ -97,7 +97,6 @@ function getChatWorldbookName(chat_name: 'current'): string | null;
 ### 返回值
 
 - **聊天文件绑定的世界书**: `string | null`
-
 
 ## getOrCreateChatWorldbook
 
