补充常见问题解答

--- a/docs/guide/关于酒馆助手/常见问题/安装与更新问题.md
+++ b/docs/guide/关于酒馆助手/常见问题/安装与更新问题.md
@@ -15,8 +15,12 @@ order: 1
 
 - 安装/更新提示成功但扩展未显示
 - 或者管理面板中无法勾选，呈灰色
+- 或者`Extension "酒馆助手" failed to load: [object Event]`
 
-**解决**: 升级酒馆版本。扩展仅支持1.12.10及以上版本。
+**解决**:
+
+- 网络问题不能下载酒馆助手依赖的第三方库，请更换网络链接重试
+- 升级酒馆版本。扩展仅支持1.12.10及以上版本
 
 ## 安装时弹出红色错误弹窗
 
@@ -35,7 +39,6 @@ order: 1
 
 **问题**: 红色错误弹窗提示 `Server Error: Need to specify how to reconcile divergent branches.`  
 **解决**: 删除扩展重新安装，数据（开关设置、脚本等）会保留。
-
 
 ## 安装时弹出黄色警告弹窗
 
