--- a/docs/guide/功能详情/其他辅助功能/内置第三方库.md
+++ b/docs/guide/功能详情/其他辅助功能/内置第三方库.md
@@ -97,6 +97,27 @@
 
 :::
 
+## tailwindcss
+
+tailwindcss 提供了很多原子化的样式，你可以很方便地设置界面样式。
+
+```html
+<div class="flex flex-col items-center p-7 rounded-2xl">
+</div>
+```
+
+## toastr
+
+通过 toastr，你可以像酒馆内置报错消息那样弹出成功、提示、警告、错误消息。
+
+:::info 示例
+
+```html [错误消息]
+toastr.error('内容', '标题');
+```
+
+:::
+
 ## YAML
 
 允许你像 JavaScript 内置的 JSON 那样解析 yaml 语法。
