feat: `createWorldbookEntries` 和 `deleteWorldbookEntries`

--- a/docs/guide/功能详情/世界书/修改世界书.md
+++ b/docs/guide/功能详情/世界书/修改世界书.md
@@ -109,3 +109,53 @@ type WorldbookUpdater =
 ### 返回值
 
 - **更新后的世界书条目**: [`WorldbookEntry[]`](./创建世界书#createworldbook)
+
+## createWorldbookEntries
+
+向世界书 `worldbook_name` 中新增条目
+
+```typescript
+function createWorldbookEntries(worldbook_name: string, new_entries: PartialDeep<WorldbookEntry>[]): Promise<{ worldbook: WorldbookEntry[]; new_entries: WorldbookEntry[] }>;
+```
+
+### 参数
+
+#### `worldbook_name`
+
+- **类型**: `string`
+- **描述**: 世界书名称
+
+#### `new_entries`
+
+- **类型**: [`PartialDeep<WorldbookEntry>[]`](./创建世界书#createworldbook)
+- **描述**: 要新增的条目
+
+### 返回值
+
+- **更新后的世界书条目**: [`WorldbookEntry[]`](./创建世界书#createworldbook)
+- **新增的条目**: [`WorldbookEntry[]`](./创建世界书#createworldbook)
+
+## deleteWorldbookEntries
+
+删除世界书 `worldbook_name` 中的条目
+
+```typescript
+function deleteWorldbookEntries(worldbook_name: string, predicate: (entry: WorldbookEntry) => boolean): Promise<{ worldbook: WorldbookEntry[]; deleted_entries: WorldbookEntry[] }>;
+```
+
+### 参数
+
+#### `worldbook_name`
+
+- **类型**: `string`
+- **描述**: 世界书名称
+
+#### `predicate`
+
+- **类型**: [`(entry: WorldbookEntry) => boolean`](./创建世界书#createworldbook)
+- **描述**: 要删除的条目
+
+### 返回值
+
+- **更新后的世界书条目**: [`WorldbookEntry[]`](./创建世界书#createworldbook)
+- **被删除的条目**: [`WorldbookEntry[]`](./创建世界书#createworldbook)
