--- a/docs/guide/功能详情/世界书/修改世界书.md
+++ b/docs/guide/功能详情/世界书/修改世界书.md
@@ -76,6 +76,30 @@ function replaceWorldbook(worldbook_name: string, worldbook: PartialDeep<Worldbo
 - **类型**: [`PartialDeep<WorldbookEntry>[]`](./创建世界书#createworldbook)
 - **描述**: 要替换的世界书内容
 
+### 示例
+
+:::code-group
+
+```typescript [禁止所有条目递归, 保持其他设置不变]
+// 禁止所有条目递归, 保持其他设置不变
+const worldbook = await getWorldbook("eramgt少女歌剧");
+await replaceWorldbook(
+  'eramgt少女歌剧',
+  worldbook.map(entry => ({
+    ...entry,
+    recursion: { prevent_incoming: true, prevent_outgoing: true, delay_until: null },
+  })),
+);
+```
+
+```typescript [删除所有名字中包含 "神乐光" 的条目]
+const worldbook = await getWorldbook("eramgt少女歌剧");
+_.remove(worldbook, entry => entry.name.includes('神乐光'));
+await replaceWorldbook("eramgt少女歌剧", worldbook);
+```
+
+:::
+
 ## updateWorldbookWith
 
 用 `updater` 函数更新世界书 `worldbook_name`
@@ -110,6 +134,12 @@ type WorldbookUpdater =
 
 - **更新后的世界书条目**: [`WorldbookEntry[]`](./创建世界书#createworldbook)
 
+### 示例
+
+```typescript [删除所有名字中包含 "神乐光" 的条目]
+await updateWorldbookWith("eramgt少女歌剧", worldbook => worldbook.filter(entry => entry.name.includes('神乐光')));
+```
+
 ## createWorldbookEntries
 
 向世界书 `worldbook_name` 中新增条目
@@ -135,6 +165,12 @@ function createWorldbookEntries(worldbook_name: string, new_entries: PartialDeep
 - **更新后的世界书条目**: [`WorldbookEntry[]`](./创建世界书#createworldbook)
 - **新增的条目**: [`WorldbookEntry[]`](./创建世界书#createworldbook)
 
+### 示例
+
+```typescript [创建两个条目, 一个标题叫 "神乐光", 一个留白]
+const { worldbook, new_entries } = await createWorldbookEntries('eramgt少女歌剧', [{ name: '神乐光' }, {}]);
+```
+
 ## deleteWorldbookEntries
 
 删除世界书 `worldbook_name` 中的条目
@@ -159,3 +195,9 @@ function deleteWorldbookEntries(worldbook_name: string, predicate: (entry: World
 
 - **更新后的世界书条目**: [`WorldbookEntry[]`](./创建世界书#createworldbook)
 - **被删除的条目**: [`WorldbookEntry[]`](./创建世界书#createworldbook)
+
+### 示例
+
+```typescript [删除所有名字中包含 "神乐光" 的条目]
+const { worldbook, deleted_entries } = await deleteWorldbookEntries('eramgt少女歌剧', entry => entry.name.includes('神乐光'));
+```
