--- a/docs/guide/功能详情/酒馆正则.md
+++ b/docs/guide/功能详情/酒馆正则.md
@@ -6,6 +6,99 @@
 
 <CustomTOC />
 
+## formatAsTavernRegexedString
+
+对 `text` 应用酒馆正则。
+
+:::code-group
+
+```typescript [formatAsTavernRegexedString]
+function formatAsTavernRegexedString(
+  text: string,
+  source: 'user_input' | 'ai_output' | 'slash_command' | 'world_info' | 'reasoning',
+  destination: 'display' | 'prompt',
+  { depth, character_name }?: FormatAsTavernRegexedStringOption,
+): string;
+```
+
+```typescript [FormatAsTavernRegexedStringOption]
+type FormatAsTavernRegexedStringOption = {
+  depth?: number; // 文本所在的深度
+  character_name?: string; // 角色卡名称
+}
+```
+
+:::
+
+### 参数
+
+#### `text`
+
+- **类型**: `string`
+- **描述**: 要应用酒馆正则的文本
+
+#### `source`
+
+- **类型**: `'user_input' | 'ai_output' | 'slash_command' | 'world_info' | 'reasoning'`
+- **描述**: 文本来源，例如来自用户输入或 AI 输出。对应于酒馆正则的`作用范围`选项。
+
+#### `destination`
+
+- **类型**: `'display' | 'prompt'`
+- **描述**: 文本将作为什么而使用，例如用于显示或作为提示词。对应于酒馆正则的`仅格式显示`和`仅格式提示词`选项。
+
+#### `option?`
+
+- **类型**: `FormatAsTavernRegexedStringOption`
+- **描述**: 可选选项
+
+##### `depth?`
+
+- **类型**: `number`
+- **描述**: 文本所在的深度；不填则不考虑酒馆正则的`深度`选项：无论该深度是否在酒馆正则的`最小深度`和`最大深度`范围内都生效
+
+##### `character_name?`
+
+- **类型**: `string`
+- **描述**: 角色卡名称；不填则使用当前角色卡名称
+
+### 返回值
+
+- **应用酒馆正则后的文本**: `string`
+
+### 示例
+
+:::code-group
+
+```typescript [基本用法]
+// 对文本应用酒馆正则，作为 AI 输出显示
+const text = "Hello world!";
+const result = formatAsTavernRegexedString(text, 'ai_output', 'display');
+```
+
+```typescript [指定深度和角色名]
+// 获取最后一楼文本，将它视为将会作为显示的 AI 输出，对它应用酒馆正则
+const message = getChatMessages(-1)[0];
+const result = formatAsTavernRegexedString(
+  message.message, 
+  'ai_output', 
+  'display', 
+  { depth: 0 }
+);
+```
+
+```typescript [用于提示词]
+// 对用户输入应用正则后用于提示词
+const userInput = "用户的输入文本";
+const processedText = formatAsTavernRegexedString(
+  userInput, 
+  'user_input', 
+  'prompt'
+);
+```
+
+:::
+
 ## isCharacterTavernRegexesEnabled
 
 判断局部正则是否被启用。
