补充类型定义文件链接

--- a/docs/guide/功能详情/其他辅助功能/内置第三方库.md
+++ b/docs/guide/功能详情/其他辅助功能/内置第三方库.md
@@ -4,6 +4,8 @@
 请务必先阅读[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md)
 :::
 
+[点击查看对应文件](https://github.com/N0VI028/JS-Slash-Runner/blob/main/src/third_party.html)
+
 ## Font Awesome
 
 [Font Awesome](https://fontawesome.com/icons/) 网站内有非常多图标可供你使用。
