--- a/docs/guide/功能详情/酒馆正则.md
+++ b/docs/guide/功能详情/酒馆正则.md
@@ -4,6 +4,8 @@
 请务必先阅读[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md)
 :::
 
+[点击查看对应类型定义文件（可发给AI或IDE使用，酒馆助手设置中提供了打包下载）](https://github.com/N0VI028/JS-Slash-Runner/blob/main/%40types/function/tavern_regex.d.ts)
+
 <CustomTOC />
 
 ## formatAsTavernRegexedString
