--- a/docs/guide/功能详情/触发快速回复命令.md
+++ b/docs/guide/功能详情/触发快速回复命令.md
@@ -5,6 +5,7 @@
 :::
 
 我们可以在嵌入的 iframe 中执行 SillyTavern 内部的 Slash 命令 (斜杠命令), 如 `/run`、`/echo` 等。
+[点击查看对应类型定义文件（可发给AI或IDE使用，酒馆助手设置中提供了打包下载）](https://github.com/N0VI028/JS-Slash-Runner/blob/main/%40types/function/slash.d.ts)
 
 <CustomTOC />
 
