--- a/docs/guide/功能详情/世界书/修改世界书.md
+++ b/docs/guide/功能详情/世界书/修改世界书.md
@@ -62,9 +62,23 @@ function rebindChatWorldbook(chat_name: 'current', worldbook_name: string): Prom
 
 完全替换 `worldbook_name` 世界书的内容为 `worldbook`
 
-```typescript
-function replaceWorldbook(worldbook_name: string, worldbook: PartialDeep<WorldbookEntry>[]): Promise<void>;
+:::code-group
+
+```typescript [replaceWorldbook]
+function replaceWorldbook(
+  worldbook_name: string,
+  worldbook: PartialDeep<WorldbookEntry>[],
+  { render }?: ReplaceWorldbookOptions,
+): Promise<void>;
 ```
+
+```typescript [ReplaceWorldbookOptions]
+interface ReplaceWorldbookOptions {
+  render?: 'debounced' | 'immediate';
+}
+```
+
+:::
 
 ### 参数
 
@@ -77,6 +91,13 @@ function replaceWorldbook(worldbook_name: string, worldbook: PartialDeep<Worldbo
 
 - **类型**: [`PartialDeep<WorldbookEntry>[]`](./创建世界书#createworldbook)
 - **描述**: 要替换的世界书内容
+
+#### `option?`
+
+一个可选的配置对象，包含以下属性：
+
+- **`render`**: `debounced|immediate`
+  - 对于对世界书的更改, 世界书编辑器应该防抖渲染 (debounced) 还是立即渲染 (immediate)? 默认为性能更好的防抖渲染
 
 ### 示例
 
@@ -109,7 +130,11 @@ await replaceWorldbook("eramgt少女歌剧", worldbook);
 :::code-group
 
 ```typescript[updateWorldbookWith]
-function updateWorldbookWith(worldbook_name: string, updater: WorldbookUpdater): Promise<WorldbookEntry[]>;
+function updateWorldbookWith(
+  worldbook_name: string,
+  updater: WorldbookUpdater,
+  { render }?: ReplaceWorldbookOptions,
+): Promise<WorldbookEntry[]>;
 ```
 
 ```typescript[WorldbookUpdater]
@@ -132,6 +157,13 @@ type WorldbookUpdater =
 - **类型**: [`WorldbookUpdater`](./修改世界书#updateworldbookwith)
 - **描述**: 用于更新世界书的函数。它应该接收世界书条目作为参数，并返回更新后的世界书条目。
 
+#### `option?`
+
+一个可选的配置对象，包含以下属性：
+
+- **`render`**: `debounced|immediate`
+  - 对于对世界书的更改, 世界书编辑器应该防抖渲染 (debounced) 还是立即渲染 (immediate)? 默认为性能更好的防抖渲染
+
 ### 返回值
 
 - **更新后的世界书条目**: [`WorldbookEntry[]`](./创建世界书#createworldbook)
@@ -147,7 +179,11 @@ await updateWorldbookWith("eramgt少女歌剧", worldbook => worldbook.filter(en
 向世界书 `worldbook_name` 中新增条目
 
 ```typescript
-function createWorldbookEntries(worldbook_name: string, new_entries: PartialDeep<WorldbookEntry>[]): Promise<{ worldbook: WorldbookEntry[]; new_entries: WorldbookEntry[] }>;
+function createWorldbookEntries(
+  worldbook_name: string,
+  new_entries: PartialDeep<WorldbookEntry>[],
+  { render }?: ReplaceWorldbookOptions,
+): Promise<{ worldbook: WorldbookEntry[]; new_entries: WorldbookEntry[] }>;
 ```
 
 ### 参数
@@ -161,6 +197,13 @@ function createWorldbookEntries(worldbook_name: string, new_entries: PartialDeep
 
 - **类型**: [`PartialDeep<WorldbookEntry>[]`](./创建世界书#createworldbook)
 - **描述**: 要新增的条目
+
+#### `option?`
+
+一个可选的配置对象，包含以下属性：
+
+- **`render`**: `debounced|immediate`
+  - 对于对世界书的更改, 世界书编辑器应该防抖渲染 (debounced) 还是立即渲染 (immediate)? 默认为性能更好的防抖渲染
 
 ### 返回值
 
@@ -178,7 +221,11 @@ const { worldbook, new_entries } = await createWorldbookEntries('eramgt少女歌
 删除世界书 `worldbook_name` 中的条目
 
 ```typescript
-function deleteWorldbookEntries(worldbook_name: string, predicate: (entry: WorldbookEntry) => boolean): Promise<{ worldbook: WorldbookEntry[]; deleted_entries: WorldbookEntry[] }>;
+function deleteWorldbookEntries(
+  worldbook_name: string,
+  predicate: (entry: WorldbookEntry) => boolean,
+  { render }?: ReplaceWorldbookOptions,
+): Promise<{ worldbook: WorldbookEntry[]; deleted_entries: WorldbookEntry[] }>;
 ```
 
 ### 参数
@@ -192,6 +239,13 @@ function deleteWorldbookEntries(worldbook_name: string, predicate: (entry: World
 
 - **类型**: [`(entry: WorldbookEntry) => boolean`](./创建世界书#createworldbook)
 - **描述**: 要删除的条目
+
+#### `option?`
+
+一个可选的配置对象，包含以下属性：
+
+- **`render`**: `debounced|immediate`
+  - 对于对世界书的更改, 世界书编辑器应该防抖渲染 (debounced) 还是立即渲染 (immediate)? 默认为性能更好的防抖渲染
 
 ### 返回值
 
