--- a/docs/guide/功能详情/世界书/创建世界书.md
+++ b/docs/guide/功能详情/世界书/创建世界书.md
@@ -120,7 +120,11 @@ type WorldbookEntry = {
 创建或替换名为 `worldbook_name` 的世界书, 内容为 `worldbook`
 
 ```typescript
-function createOrReplaceWorldbook(worldbook_name: string, worldbook?: WorldbookEntry[]): Promise<boolean>;
+function createOrReplaceWorldbook(
+  worldbook_name: string,
+  worldbook?: PartialDeep<WorldbookEntry>[],
+  { render }?: ReplaceWorldbookOptions,
+): Promise<boolean>;
 ```
 
 ### 参数
@@ -134,6 +138,13 @@ function createOrReplaceWorldbook(worldbook_name: string, worldbook?: WorldbookE
 
 - **类型**: [`WorldbookEntry[]`](./创建世界书#createworldbook)
 - **描述**: 世界书内容; 不填则没有任何条目
+
+#### `option?`
+
+一个可选的配置对象，包含以下属性：
+
+- **`render`**: `debounced|immediate`
+  - 对于对世界书的更改, 世界书编辑器应该防抖渲染 (debounced) 还是立即渲染 (immediate)? 默认为性能更好的防抖渲染
 
 ### 返回值
 
