--- a/docs/guide/功能详情/预设操作/修改预设.md
+++ b/docs/guide/功能详情/预设操作/修改预设.md
@@ -59,9 +59,23 @@ function renamePreset(preset_name: Exclude<string, 'in_use'>, new_name: string):
 
 完全替换 `preset_name` 预设的内容为 `preset`。
 
-```typescript
-function replacePreset(preset_name: LiteralUnion<'in_use', string>, preset: Preset): Promise<void>;
+:::code-group
+
+```typescript [replacePreset]
+function replacePreset(
+  preset_name: LiteralUnion<'in_use', string>,
+  preset: Preset,
+  { render }?: ReplacePresetOptions,
+): Promise<void>
 ```
+
+```typescript [ReplacePresetOptions]
+interface ReplacePresetOptions {
+  render?: 'debounced' | 'immediate';
+}
+```
+
+:::
 
 ### 参数
 
@@ -74,6 +88,13 @@ function replacePreset(preset_name: LiteralUnion<'in_use', string>, preset: Pres
 
 - **类型**: [`Preset`](./创建预设.md#createpreset)
 - **描述**: 预设内容
+
+#### `option?`
+
+一个可选的配置对象，包含以下属性：
+
+- **`render`**: `debounced|immediate`
+  - 如果对 `'in_use'` 预设进行操作, 应该防抖渲染 (debounced) 还是立即渲染 (immediate)? 默认为性能更好的防抖渲染
 
 ### 示例
 
@@ -101,7 +122,11 @@ await replacePreset('预设B', preset_b);
 ::: code-group
 
 ```typescript [updatePresetWith]
-function updatePresetWith(preset_name: LiteralUnion<'in_use', string>, updater: PresetUpdater): Promise<Preset>;
+function updatePresetWith(
+  preset_name: LiteralUnion<'in_use', string>,
+  updater: PresetUpdater,
+  { render }?: ReplacePresetOptions,
+): Promise<Preset>;
 ```
 
 ```typescript [PresetUpdater]
@@ -121,6 +146,13 @@ type PresetUpdater = ((preset: Preset) => Preset) | ((preset: Preset) => Promise
 
 - **类型**: [`PresetUpdater`](./修改预设.md#updatepresetwith)
 - **描述**: 用于更新预设的函数. 它应该接收预设内容作为参数, 并返回更新后的预设内容.
+
+#### `option?`
+
+一个可选的配置对象，包含以下属性：
+
+- **`render`**: `debounced|immediate`
+  - 如果对 `'in_use'` 预设进行操作, 应该防抖渲染 (debounced) 还是立即渲染 (immediate)? 默认为性能更好的防抖渲染
 
 ### 返回值
 
@@ -153,7 +185,11 @@ const preset = await updatePresetWith('预设B', preset => {
 将预设内容修改回预设中, 如果某个内容不存在, 则该内容将会采用原来的值。
 
 ```typescript
-function setPreset(preset_name: LiteralUnion<'in_use', string>, preset: PartialDeep<Preset>): Promise<Preset>;
+function setPreset(
+  preset_name: LiteralUnion<'in_use', string>,
+  preset: PartialDeep<Preset>,
+  { render }?: ReplacePresetOptions,
+): Promise<Preset>;
 ```
 
 ### 参数
@@ -167,6 +203,13 @@ function setPreset(preset_name: LiteralUnion<'in_use', string>, preset: PartialD
 
 - **类型**: [`PartialDeep<Preset>`](./创建预设.md#createpreset)
 - **描述**: 预设内容
+
+#### `option?`
+
+一个可选的配置对象，包含以下属性：
+
+- **`render`**: `debounced|immediate`
+  - 如果对 `'in_use'` 预设进行操作, 应该防抖渲染 (debounced) 还是立即渲染 (immediate)? 默认为性能更好的防抖渲染
 
 ### 返回值
 
