--- a/docs/guide/功能详情/预设操作/创建预设.md
+++ b/docs/guide/功能详情/预设操作/创建预设.md
@@ -262,7 +262,8 @@ const default_preset: Preset = {
 ```typescript
 function createOrReplacePreset(
   preset_name: LiteralUnion<'in_use', string>,
-  preset: Preset = default_preset
+  preset?: Preset,
+  { render }?: ReplacePresetOptions,
 ): Promise<boolean>;
 ```
 
@@ -277,6 +278,13 @@ function createOrReplacePreset(
 
 - **类型**: [`Preset`](./创建预设.md#createpreset)
 - **描述**: 预设内容; 不填则使用默认内容
+
+#### `option?`
+
+一个可选的配置对象，包含以下属性：
+
+- **`render`**: `debounced|immediate`
+  - 如果对 `'in_use'` 预设进行操作, 应该防抖渲染 (debounced) 还是立即渲染 (immediate)? 默认为性能更好的防抖渲染
 
 ### 返回值
 
