--- a/docs/guide/基本用法/脚本库.md
+++ b/docs/guide/基本用法/脚本库.md
@@ -45,7 +45,7 @@ order: 2
 
 - 脚本可以直接使用 jQuery 的 `$` 符号控制 SillyTavern 主界面的 DOM 元素
 - 可以直接使用的库可在[内置第三方库](/guide/功能详情/其他辅助功能/内置第三方库)中查看，无需重复安装
-- 如果要在脚本关闭时执行功能，请使用 `$('unload',()=>{})`
+- 如果要在脚本关闭时执行功能，请使用 `$('pagehide',()=>{})`
 
 :::
 
